src/objects/Account_Convert__c.object
<CustomObject>
    <description>This object hold account that is converted from Person Accounts.
List of Conversations
Person Account -&gt; Accumulation
Person Account -&gt; Trust Account
Person Account -&gt; Estate Account
Person Account -&gt; Business Account</description>
    <fields>
        <fullName>Converted_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Converted Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Converts</relationshipLabel>
        <relationshipName>Account_Converts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Received_Date__c</fullName>
        <description>Time Stamp for Document Received Date</description>
        <label>Document Received Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Document</label>
        <referenceTo>Account_Document__c</referenceTo>
        <relationshipLabel>Account Converts</relationshipLabel>
        <relationshipName>Account_Converts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Convert</label>
    <nameField>
        <label>Account Convert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Converts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>